# conduit

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml
acfs-agents/beads_rust/: AGENTS.md
crates/conduit-cli/: Cargo.toml
crates/conduit-cli/src/: main.rs
crates/conduit-contract/: Cargo.toml
crates/conduit-contract/src/: lib.rs
crates/conduit-core/: Cargo.toml
crates/conduit-core/benches/: metadata_overhead.rs
crates/conduit-core/src/: batch.rs  capability.rs  context.rs  error.rs  lib.rs  lifecycle.rs  message.rs  metadata.rs  ports.rs
crates/conduit-core/tests/: public_api_substrate.rs
crates/conduit-engine/: Cargo.toml
crates/conduit-engine/benches/: backpressure_capacity.rs
crates/conduit-engine/examples/: ai_call_orchestration.rs  fanout_fanin.rs  feedback_loop.rs  replay_branch_eval.rs  stream_join_window.rs  watcher_cancellation.rs
crates/conduit-engine/src/: lib.rs
crates/conduit-introspection/: Cargo.toml
crates/conduit-introspection/src/: lib.rs
crates/conduit-runtime/: Cargo.toml
crates/conduit-runtime/src/: lib.rs
crates/conduit-test-kit/: Cargo.toml
crates/conduit-test-kit/src/: lib.rs
crates/conduit-types/: Cargo.toml
crates/conduit-types/src/: lib.rs
crates/conduit-wasm/: Cargo.toml
crates/conduit-wasm/examples/: README.md  mixed_pipeline.rs
crates/conduit-wasm/fixtures/: README.md
crates/conduit-wasm/fixtures/uppercase-guest/: Cargo.toml  README.md
crates/conduit-wasm/fixtures/uppercase-guest/src/: lib.rs
crates/conduit-wasm/src/: lib.rs
crates/conduit-wasm/wit/: conduit-batch.wit  pureflow-batch.wit
crates/conduit-workflow/: Cargo.toml
crates/conduit-workflow-format/: Cargo.toml
crates/conduit-workflow-format/src/: lib.rs
crates/conduit-workflow/src/: lib.rs
crates/pureflow-contract/: Cargo.toml
crates/pureflow-core/: Cargo.toml
crates/pureflow-engine/: Cargo.toml
crates/pureflow-introspection/: Cargo.toml
crates/pureflow-runtime/: Cargo.toml
crates/pureflow-test-kit/: Cargo.toml
crates/pureflow-types/: Cargo.toml
crates/pureflow-types/src/: lib.rs
crates/pureflow-wasm/: Cargo.toml
crates/pureflow-workflow/: Cargo.toml
crates/pureflow-workflow-format/: Cargo.toml
docs/: AGENTS.md  HANDOFF.md  arrow-schema-compatibility-plan-2026-05-11.md  benchmark-baseline-2026-05-08.md  benchmark-operations.md  conduit_proposal.md  contract-capability-authoring.md  documentation-architecture.md  examples-catalog.md  handoff_2026-04-24.md  handoff_2026-04-24_evening.md  handoff_2026-04-24_late.md  handoff_2026-04-28.md  handoff_2026-04-29.md  handoff_2026-04-30.md  handoff_2026-05-06.md  handoff_2026-05-07.md  handoff_2026-05-11.md  metadata-json.md  node-authoring-error-patterns.md  package-metadata-audit-2026-05-09.md  release-notes-source-checkpoint-template.md  release-readiness.md  schema-generation.md  validation-matrix.md  workflow-run-guide.md
docs/archetecture/: conduit_proposal.md  proposal_1.md  proposal_2.md  proposal_final.md  proposal_structured_payloads.md  pureflow_proposal.md
docs/architecture-guide/: _quarto.yml  diagrams-and-flows.qmd  index.qmd  index.tex  package-contracts.qmd  runtime-model.qmd  system-overview.qmd
docs/architecture-guide/_output/: diagrams-and-flows.html  index.html  package-contracts.html  runtime-model.html  search.json  system-overview.html
docs/architecture-guide/figures/: system-overview-runtime-flow.mmd
docs/archive/: handoff_2026-04-24.md  handoff_2026-04-24_evening.md  handoff_2026-04-24_late.md  handoff_2026-04-26.md  handoff_2026-04-27.md
docs/audits/: Audit_2026_05_07.md  Audit_4_23.md  Audit_scope.md
docs/epics/: epic-1-foundation.md
docs/llm/: README.md  architecture-overview.md  contracts-and-boundaries.md  runtime-lifecycle.md  tooling-and-doc-generation.md
docs/questions/: 2026-04-27_contracts_core.md  2026-04-28_wasmtime_adapter_abi.md
docs/questions/responses/: 2026-04-27_contracts_core.md  2026-04-27_identifier_length_cap.md  2026-04-27_metadata_boundary.md  2026-04-28_wasm_batch_trait.md  2026-04-28_wasmtime_adapter_abi.md
examples/: native-linear-etl.md  native-linear-etl.workflow.json  wasm-uppercase.components.json  wasm-uppercase.md  wasm-uppercase.workflow.json
examples/authoring/: README.md  native-fanout.workflow.json  native-join.workflow.yaml  wasm-uppercase.components.json  wasm-uppercase.workflow.json
examples/workloads/: ai-call-orchestration.md  ai-call-orchestration.workflow.json  fanout-fanin.md  fanout-fanin.workflow.json  replay-branch-eval.md  replay-branch-eval.workflow.json  stream-join-window.md  stream-join-window.workflow.json  watcher-cancellation.md  watcher-cancellation.workflow.json
nix/devshell/: ai-tools.nix  core.nix  quarto.nix  rust-lint-dylint.nix
