[workspace]
members = [
  "crates/conduit-cli",
  "crates/conduit-core",
  "crates/conduit-engine",
  "crates/conduit-runtime",
  "crates/conduit-test-kit",
  "crates/conduit-types",
  "crates/conduit-workflow",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
asupersync = "0.2.9"
conduit-core = { path = "crates/conduit-core" }
conduit-engine = { path = "crates/conduit-engine" }
conduit-runtime = { path = "crates/conduit-runtime" }
conduit-test-kit = { path = "crates/conduit-test-kit" }
conduit-types = { path = "crates/conduit-types" }
conduit-workflow = { path = "crates/conduit-workflow" }
futures = "0.3.31"
proptest = "1.6.0"

[workspace.metadata.dylint]
libraries = [
  { path = "/home/ben/code/highland-labs-lints/lints/*" },
]

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
