[workspace]
members = [
  "crates/conduit-cli",
  "crates/conduit-core",
  "crates/conduit-contract",
  "crates/conduit-engine",
  "crates/conduit-introspection",
  "crates/conduit-runtime",
  "crates/conduit-test-kit",
  "crates/conduit-types",
  "crates/conduit-wasm",
  "crates/conduit-workflow",
  "crates/conduit-workflow-format",
]
resolver = "2"
exclude = [
  "crates/conduit-wasm/fixtures/uppercase-guest",
]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
asupersync = "0.2.9"
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
bytes = "1.10.1"
conduit-core = { path = "crates/conduit-core" }
conduit-contract = { path = "crates/conduit-contract" }
conduit-engine = { path = "crates/conduit-engine" }
conduit-introspection = { path = "crates/conduit-introspection" }
conduit-runtime = { path = "crates/conduit-runtime" }
conduit-test-kit = { path = "crates/conduit-test-kit" }
conduit-types = { path = "crates/conduit-types" }
conduit-wasm = { path = "crates/conduit-wasm" }
conduit-workflow = { path = "crates/conduit-workflow" }
conduit-workflow-format = { path = "crates/conduit-workflow-format" }
criterion = "0.8.2"
futures = "0.3.31"
insta = "1.47.2"
proptest = "1.6.0"
quickcheck = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wasmtime = "43.0.0"
wit-bindgen = "0.57.1"

[workspace.metadata.dylint]
libraries = [
  { path = "/home/ben/code/highland-labs-lints/lints/*" },
]

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
