[workspace]
members = [
  "crates/pureflow-cli",
  "crates/pureflow-core",
  "crates/pureflow-contract",
  "crates/pureflow-engine",
  "crates/pureflow-introspection",
  "crates/pureflow-runtime",
  "crates/pureflow-test-kit",
  "crates/pureflow-types",
  "crates/pureflow-wasm",
  "crates/pureflow-workflow",
  "crates/pureflow-workflow-format",
]
resolver = "2"
exclude = [
  "crates/pureflow-wasm/fixtures/uppercase-guest",
]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
asupersync = "0.2.9"
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
bytes = "1.10.1"
pureflow-core = { path = "crates/pureflow-core" }
pureflow-contract = { path = "crates/pureflow-contract" }
pureflow-engine = { path = "crates/pureflow-engine" }
pureflow-introspection = { path = "crates/pureflow-introspection" }
pureflow-runtime = { path = "crates/pureflow-runtime" }
pureflow-test-kit = { path = "crates/pureflow-test-kit" }
pureflow-types = { path = "crates/pureflow-types" }
pureflow-wasm = { path = "crates/pureflow-wasm" }
pureflow-workflow = { path = "crates/pureflow-workflow" }
pureflow-workflow-format = { path = "crates/pureflow-workflow-format" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
criterion = "0.8.2"
futures = "0.3.31"
insta = "1.47.2"
proptest = "1.6.0"
quickcheck = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wasmtime = "43.0.0"
wit-bindgen = "0.57.1"

[workspace.metadata.dylint]
libraries = [
  { path = "/home/ben/code/highland-labs-lints/lints/*" },
]

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
