[package]
name = "conduit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
conduit-contract.workspace = true
conduit-core.workspace = true
conduit-introspection = { workspace = true, features = ["serde"] }
conduit-workflow.workspace = true
conduit-workflow-format.workspace = true

[lints]
workspace = true
