[package]
name = "conduit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "conduit"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
conduit-contract.workspace = true
conduit-core.workspace = true
conduit-engine.workspace = true
conduit-introspection = { workspace = true, features = ["serde"] }
conduit-runtime = { workspace = true, features = ["tracing"] }
conduit-types.workspace = true
conduit-wasm.workspace = true
conduit-workflow.workspace = true
conduit-workflow-format = { workspace = true, features = ["toml", "yaml"] }
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
