[package]
name = "conduit-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
conduit-core.workspace = true
conduit-types.workspace = true
conduit-workflow.workspace = true

[dev-dependencies]
conduit-test-kit.workspace = true
quickcheck.workspace = true

[lints]
workspace = true
