[package]
name = "conduit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
asupersync.workspace = true
bytes.workspace = true
conduit-types.workspace = true
conduit-workflow.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = []
arrow = ["dep:arrow-array", "dep:arrow-schema"]

[[bench]]
name = "metadata_overhead"
harness = false

[lints]
workspace = true
