[package]
name = "conduit-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
conduit-core.workspace = true
conduit-runtime.workspace = true
conduit-workflow.workspace = true

[dev-dependencies]
conduit-test-kit.workspace = true

[lints]
workspace = true
