[package]
name = "conduit-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
conduit-core.workspace = true
conduit-runtime.workspace = true
conduit-types.workspace = true
conduit-workflow.workspace = true
futures.workspace = true

[dev-dependencies]
conduit-test-kit.workspace = true
criterion.workspace = true

[[bench]]
name = "backpressure_capacity"
harness = false

[lints]
workspace = true
