[package]
name = "conduit-introspection"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
conduit-contract.workspace = true
conduit-core.workspace = true
conduit-types.workspace = true
conduit-workflow.workspace = true

[dev-dependencies]
conduit-test-kit.workspace = true

[lints]
workspace = true
