[package]
name = "conduit-introspection"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
conduit-contract.workspace = true
conduit-core.workspace = true
conduit-types.workspace = true
conduit-workflow.workspace = true
serde_json = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde_json"]

[dev-dependencies]
conduit-test-kit.workspace = true
insta.workspace = true

[lints]
workspace = true
