[package]
name = "conduit-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
asupersync.workspace = true
conduit-core.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
conduit-test-kit.workspace = true
futures.workspace = true

[lints]
workspace = true
