[package]
name = "conduit-test-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
conduit-core.workspace = true
conduit-types.workspace = true
conduit-workflow.workspace = true
proptest.workspace = true

[dev-dependencies]
conduit-runtime.workspace = true

[lints]
workspace = true
