[package]
name = "conduit-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
conduit-core.workspace = true
conduit-types.workspace = true
serde_json.workspace = true
wasmtime.workspace = true

[dev-dependencies]
conduit-engine.workspace = true
conduit-workflow.workspace = true
futures.workspace = true
serde.workspace = true
wit-bindgen.workspace = true

[lints]
workspace = true
