[package]
name = "conduit-workflow-format"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
conduit-types.workspace = true
conduit-workflow.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
