[package]
name = "pureflow-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pureflow-core.workspace = true
pureflow-types.workspace = true
pureflow-workflow.workspace = true

[dev-dependencies]
pureflow-test-kit.workspace = true
quickcheck.workspace = true

[lints]
workspace = true
