[package]
name = "pureflow-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
asupersync.workspace = true
pureflow-core.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
pureflow-test-kit.workspace = true
futures.workspace = true

[lints]
workspace = true
